--- a/about.html
+++ b/about.html
@@ -17,25 +17,25 @@
     <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
 
-  <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="sidebar">
+    <a href="javascript:void(0)" class="closebtn">&times;</a>
     <div id="sidebar-links">
       <a href="index.html">Start</a>
       <a href="meal_manager.html">Manage Meals</a>
       <a href="about.html">About</a>
     </div>
-    </div>
+  </div>
 
 <header>
-  <h1  class="unselectable" id="about-title">About</h1>
-  <div id="navbar">
-    <button id="hamburger" onclick="openNav()">&#9776;</button>
-  </div>
+  <button class="sidebar-hamburger">&#9776;</button>
+  <h1 class="unselectable" id="about-page-title">About</h1>
 </header>
 
 <body>
   <main>
-    <p class="main-text">This application is intended to make the weekly shop a wee bit easier by giving you meal ideas you may have forgotten about. Click the 'Generate my meal plan' button on the homepage and you'll be presented with a list of meal ideas for the week along with their ingredients.</p>
+    <p class="main-text">The purpose of this app is to make the weekly shop a wee bit easier by taking away the decision fatigue that comes with meal planning.</p>
+      
+    <p class="main-text">Click the 'Generate my meal plan' button on the homepage and you'll be presented with a list of meal ideas for the week along with their ingredients.</p>
 
     <p class="main-text">You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site, until you clear your browser's cookies (I'm working on an export/import feature!).</p>
   </main>
